Create sidevar and empty home page

--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -1,1 +1,7 @@
 {% extends "base.html" %}
+
+{% block content %}
+  <hr>
+  <h1 class="text-center">Welcome, you can look at our type of dishes, cooks or dishes!</h1>
+
+{% endblock %}
