--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,10 +10,18 @@
       {% block title %}
         Kitchen
       {% endblock %}
-      </title>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
   </head>
-  <body>
-    {% block content %}
-    {% endblock %}
+  <body >
+    <div class="main_content">
+      {% block header %}
+        {% include "includes/default_header.html" %}
+      {% endblock %}
+      {% block content %}
+      {% endblock %}
+    </div>
+
   </body>
 </html>
