--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,7 @@ body{
     background-image: url("../images/food.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    font-size: 24px;
 }
 
 .main_content {
@@ -17,9 +18,11 @@ body{
 }
 
 .header_button {
-    background-color: gray;
+    background-color: lightslategray;
     height: 50px;
     width: 150px;
     margin-top: 10px;
+    margin-right: 5px;
     border: black solid 2px;
+    font-size: 20px;
 }
