--- a/templates/includes/default_header.html
+++ b/templates/includes/default_header.html
@@ -1,8 +1,9 @@
 <div class="container bg-header bg-opacity-25 rounded-pill">
 <div class="row py-7 mt-2 text-md-center">
   <div class="navbar-brand font-weight-bolder">
+    <a href="{% url 'kitchen:index' %}" class="btn header_button bg-gradient bg-opacity-25 rounded-pill float-start home_button">Home</a>
     <a href="#" class="btn header_button bg-gradient bg-opacity-25 rounded-pill">All dishes</a>
-    <a href="#" class="btn header_button bg-gradient bg-opacity-25 rounded-pill">All dish type</a>
+    <a href="#" class="btn header_button bg-gradient bg-opacity-25 rounded-pill">All dish types</a>
     <a href="#" class="btn header_button bg-gradient bg-opacity-25 rounded-pill">All cooks</a>
     {% if user.is_authenticated %}
       <div style="float: right" class="">
