--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="m-5">
-    <h1 class="text-center">Welcome, you can look at our type of dishes, cooks or dishes!</h1>
+    <h1 class="text-center">Welcome, here you can look at our type of dishes, cooks or dishes!</h1>
     <br>
     <p class="">
       In our kitchen there are many chefs with many years of experience,
