--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,10 @@
       {% block header %}
         {% include "includes/default_header.html" %}
       {% endblock %}
-      {% block content %}
-      {% endblock %}
+      <div class="m-5">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
 
   </body>
