--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -29,7 +29,7 @@
       {% endfor %}
     </table>
   {% else %}
-    <p>We don't have any dish types now :(</p>
+    <p>We don't have any dish now :(</p>
   {% endif %}
   <h2>You can create your dish - <a href="" class="btn create_button bg-gradient rounded-pill">Create</a> implement letter</h2>
 
