--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,10 @@
       <div class="m-5">
         {% block content %}
         {% endblock %}
+
+        {% block pagination %}
+          {% include "includes/pagination.html" %}
+        {% endblock %}
       </div>
     </div>
 
