--- a/templates/includes/default_header.html
+++ b/templates/includes/default_header.html
@@ -1,5 +1,5 @@
 <div class="container bg-header bg-opacity-25 rounded-pill">
-<div class="row py-7 mt-2 text-md-center">
+<div class="row py-7 text-md-center">
   <div class="navbar-brand font-weight-bolder">
     <a href="{% url 'kitchen:index' %}" class="btn custom_button bg-gradient bg-opacity-25 rounded-pill float-start home_button">Home</a>
     <a href="{% url 'kitchen:dishes-list' %}" class="btn custom_button bg-gradient bg-opacity-50 rounded-pill">All dishes</a>
