Create cook detail page, change url adress to list pages

--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -17,7 +17,7 @@
         {% for cook in cook_list %}
       <tbody>
         <tr>
-          <th scope="row">{{ cook.id }}</th>
+          <th scope="row"><a href="{% url 'kitchen:cooks-detail' pk=cook.id %}">{{ cook.id }}</a></th>
           <td>{{ cook.username }}</td>
           <td>{{ cook.years_of_experience }}</td>
           <td>{{ cook.first_name }}</td>
