Better login page

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Log out</h1>
-  <form action="{% url 'login' %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <br>
-    <input type="submit" value="Log out">
-  </form>
+  <h1>Logged out!</h1>
+  <a href="{% url 'login' %}">Login again</a>
   
 {% endblock %}
