--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 body{
     background-image: url("../images/food.jpg");
+    backdrop-filter: blur(5px);
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 24px;
@@ -66,4 +67,9 @@ body{
 
 .pagination_link {
     color: black;
+}
+
+.bg-login {
+    background-color: #EEEEEE;
+    border: black solid 2px;
 }
