--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,15 +1,24 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 
 {% block content %}
+
   <h1 class="text-center">Login</h1>
-  <div class="dropdown-menu">
+      {% if form.errors %}
+        <p style="color: #FF4343" class="text-center">Incorrect username or password</p>
+      {% endif %}
+  <div class="container d-flex justify-content-center">
+
+    <form action="{% url 'login' %}" method="post" class="login bg-login p-5 rounded-3 w-25">
+      {% csrf_token %}
+        <span>{{form.username|as_crispy_field}}</span>
+        <span>{{form.password|as_crispy_field}}</span>
+        <input type="submit" value="Login" class="login rounded-4">
+    </form>
 
   </div>
-  <form action="{% url 'login' %}" method="post" class="text-center">
-    {% csrf_token %}
-    {{form.as_p}}
-     <input type="submit" value="Login" class="p-2 bd-highlight rounded-4">
-  </form>
+
   
 {% endblock %}
 
