Create cook create page

--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -56,7 +56,7 @@
   </table>
 
   {% else %}
-    <p>It's very difficult, no one knows how to do it :(</p>
+    <p>This is a beginner, he did not have time to tell what dishes he can cook</p>
   {% endif %}
 
 
