--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Our cooks:</h1>
-  <h2>You can create new cook - <a href="" class="btn create_button bg-gradient rounded-pill">Create</a> implement letter</h2>
+  <h2>You can create new cook - <a href="{% url 'kitchen:cooks-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a> implement letter</h2>
   {% if cook_list %}
       <table class="table">
       <thead>
