--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 body{
@@ -8,7 +8,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
+    height: 100vh;
 
 }
 
@@ -19,7 +19,10 @@ body{
     margin-left: 250px;
     margin-right: 250px;
     background-image: url('../images/background.jpg');
-    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow: scroll;
 }
 
 .bg-header {
