--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -24,7 +24,7 @@
           <td>{{ dish.description }}</td>
           <td>{{ dish.price }}$</td>
           <td>{{ dish.dish_type }}</td>
-          <td><a href="" class="btn update_button bg-gradient rounded-pill">Update</a> implement letter</td>
+          <td><a href="{% url 'kitchen:dishes-update' pk=dish.id %}" class="btn update_button bg-gradient rounded-pill">Update</a></td>
           <td><a href="" class="btn delete_button bg-gradient rounded-pill">Delete</a> implement letter</td>
       </tbody>
       {% endfor %}
