--- a/templates/kitchen/dish_types_list.html
+++ b/templates/kitchen/dish_types_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Our dish types:</h1>
-  <h2>You can create your dish type - <a href="" class="btn create_button bg-gradient rounded-pill">Create</a> implement letter</h2>
+  <h2>You can create your dish type - <a href="{% url 'kitchen:dish-type-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a></h2>
   {% if dish_type_list %}
       <table class="table">
       <thead>
@@ -18,7 +18,7 @@
         <tr>
           <th scope="row">{{ dish_type.id }}</th>
           <td>{{ dish_type.name }}</td>
-          <td><a href="" class="btn update_button bg-gradient rounded-pill">Update</a> implement letter</td>
+          <td><a href="{% url 'kitchen:dish-type-update' pk=dish_type.id %}" class="btn update_button bg-gradient rounded-pill">Update</a></td>
           <td><a href="" class="btn delete_button bg-gradient rounded-pill">Delete</a> implement letter</td>
       </tbody>
       {% endfor %}
