--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 body{
@@ -9,7 +9,6 @@ body{
     background-attachment: fixed;
     background-size: cover;
     height: 100vh;
-
 }
 
 .main_content {
@@ -22,7 +21,11 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    overflow: scroll;
+    overflow-y: scroll;
+}
+
+.main_content::-webkit-scrollbar {
+  display: none;
 }
 
 .bg-header {
