--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Our dishes:</h1>
-  <h2>You can create new dish - <a href="{% url 'kitchen:dishes-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a> implement letter</h2>
+  <h2>You can create new dish - <a href="{% url 'kitchen:dishes-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a></h2>
   {% if dish_list %}
       <table class="table">
       <thead>
@@ -25,7 +25,7 @@
           <td>{{ dish.price }}$</td>
           <td>{{ dish.dish_type }}</td>
           <td><a href="{% url 'kitchen:dishes-update' pk=dish.id %}" class="btn update_button bg-gradient rounded-pill">Update</a></td>
-          <td><a href="" class="btn delete_button bg-gradient rounded-pill">Delete</a> implement letter</td>
+          <td><a href="{% url 'kitchen:dishes-delete' pk=dish.id %}" class="btn delete_button bg-gradient rounded-pill">Delete</a></td>
       </tbody>
       {% endfor %}
     </table>
