--- a/templates/kitchen/dish_types_form.html
+++ b/templates/kitchen/dish_types_form.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update,Create" }} dishes type</h1>
+  <h1>{{ object|yesno:"Update,Create" }} dish type</h1>
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="Submit" class="btn btn-primary">
+    <input type="submit" value="Submit" class="btn create_button rounded-3">
   </form>
 {% endblock %}
