--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Our cooks:</h1>
+  <form action="" method="get" class="row g-3 align-items-center">
+  <div>
+    <span class="list-inline-item">{{ search_form_cooks|crispy }}</span>
+    <input type="submit" value="🔍" class="list-inline-item">
+  </div>
+  </form>
   <h2>You can create new cook - <a href="{% url 'kitchen:cooks-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a></h2>
   {% if cook_list %}
       <table class="table">
