--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Our dishes:</h1>
+
+  <form action="" method="get" class="row g-3 align-items-center">
+  <div>
+    <span class="list-inline-item">{{ search_form_dishes|crispy }}</span>
+    <input type="submit" value="🔍" class="list-inline-item">
+  </div>
+  </form>
+
   <h2>You can create new dish - <a href="{% url 'kitchen:dishes-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a></h2>
   {% if dish_list %}
       <table class="table">
