--- a/templates/kitchen/dish_types_confirm_delete.html
+++ b/templates/kitchen/dish_types_confirm_delete.html
@@ -6,8 +6,8 @@
   <form action="" method="post">
     {% csrf_token %}
     <div class="ms-3">
-      <input type="submit" value="Yes, I am sure" class="btn delete_button rounded-2">
-      <a href="{% url 'kitchen:dish-type-list' %}" class="btn create_button rounded-2 ms-2">Cancel</a>
+      <input type="submit" value="Yes, I am sure" class="btn delete_button rounded-2 custom_button_delete_confirm">
+      <a href="{% url 'kitchen:dish-type-list' %}" class="btn create_button rounded-2 ms-2 pt-1 custom_button_delete_confirm">Cancel</a>
     </div>
 
   </form>
