--- a/templates/kitchen/dish_types_list.html
+++ b/templates/kitchen/dish_types_list.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Our dish types:</h1>
+  <form action="" method="get" class="row g-3 align-items-center">
+  <div>
+    <span class="list-inline-item">{{ search_form_dish_types|crispy }}</span>
+    <input type="submit" value="🔍" class="list-inline-item">
+  </div>
+  </form>
   <h2>You can create your dish type - <a href="{% url 'kitchen:dish-type-create' %}" class="btn create_button bg-gradient rounded-pill">Create</a></h2>
   {% if dish_type_list %}
       <table class="table">
