--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1 class="text-center">Welcome, here you can look at our type of dishes, cooks or dishes!</h1>
   <br>
-  <p class="">
+  <p class="fs-4">
     In our kitchen there are many chefs with many years of experience,
     each of them is a professional in his field.
     Also in our menu there are many dishes for every taste and type.
@@ -12,10 +12,10 @@
   <p class="h2">
     We have:
   </p>
-  <ul>
-    <li class="">{{ num_dish_types }} dish types</li>
-    <li class="">{{ num_dishes }} dishes</li>
-    <li class="">{{ num_cooks }} professional cooks</li>
+  <ul class="fs-4">
+    <li>{{ num_dish_types }} dish types</li>
+    <li>{{ num_dishes }} dishes</li>
+    <li>{{ num_cooks }} professional cooks</li>
   </ul>
   <br>
   <p class="h4 text-center">
