Create toggle assign func on dish detail page

--- a/templates/includes/default_header.html
+++ b/templates/includes/default_header.html
@@ -6,18 +6,13 @@
     <a href="{% url 'kitchen:dishes-list' %}" class="btn custom_button bg-gradient bg-opacity-50 rounded-pill">All dishes</a>
     <a href="{% url 'kitchen:cooks-list' %}" class="btn custom_button bg-gradient bg-opacity-25 rounded-pill">All cooks</a>
     {% if user.is_authenticated %}
-      <div class="float-end">
-        <h4 class="d-inline">{{ user.username }}</h4>
-        <a href="{% url 'logout' %}" class="btn custom_button bg-gradient bg-warning rounded-pill">Logout</a>
-      </div>
-
+      <a href="{% url 'logout' %}" class="btn custom_button bg-gradient bg-warning rounded-pill float-end">Logout</a>
+      <h4 class="d-inline text-center float-end mt-3">{{ user.username }}&nbsp;</h4>
     {% else %}
       <a href="{% url 'login' %}" class="btn custom_button bg-gradient bg-success rounded-pill float-end">Log in</a>
-    {% endif %} 
+    {% endif %}
 
   </div>
 </div>
 </div>
 <hr>
-
-
