--- a/templates/kitchen/cook_confirm_delete.html
+++ b/templates/kitchen/cook_confirm_delete.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     <div class="ms-3">
       <input type="submit" value="Yes, I am sure" class="btn delete_button rounded-2 custom_button_delete_confirm">
-      <a href="{% url 'kitchen:cooks-detail' pk=dish.id %}" class="btn create_button rounded-2 ms-2 pt-1 custom_button_delete_confirm">Cancel</a>
+      <a href="{% url 'kitchen:cooks-detail' pk=cook.id %}" class="btn create_button rounded-2 ms-2 pt-1 custom_button_delete_confirm">Cancel</a>
     </div>
 
   </form>
